2015-01-25  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/unix/sysv/linux/ia64/lowlevellock.h (lll_futex_requeue):
	Mark _retval as used.
	(lll_futex_wake_unlock): Likewise.
	(lll_futex_timed_wait_requeue_pi): Likewise.

	* sysdeps/unix/sysv/linux/m68k/coldfire/bits/atomic.h
	(atomic_compare_and_exchange_val_acq): Use uint32_t for the
	register variables.

	* sysdeps/m68k/m680x0/fpu/fraiseexcpt.c (__feraiseexcept): Use
	libm_hidden_def.

	* sysdeps/m68k/bits/byteswap.h (__bswap_16, __bswap_32)
	(__bswap_64): Mark as __always_inline.

2015-01-25  Bram  <bug_rh@spam.wizbit.be>

	[BZ #15378]
	* elf/dl-load.c (open_path): Avoid writing to 'env_path_list'
	when none of the search directories exist.

2015-01-24  Adhemerval Zanellla  <azanella@linux.vnet.ibm.com>

	[BZ #17869]
	* sysdeps/powerpc/powerpc64/power8/memset.S: Use power7 instead of
	power8 in .machine directive.

	[BZ #17868]
	* sysdeps/powerpc/powerpc64/dl-machine.h (resolve_ifunc): Force value
	set dependency from opd value.

2015-01-23  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features):
	Treat model numbers 0x4a/0x4d/0x5a/0x5d as Intel Silvermont
	architecture.

2015-01-23  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #17870]
	* nptl/sem_post.c (__new_sem_post): Replace unsigned long int
	with uint64_t.
	* nptl/sem_waitcommon.c (__sem_wait_cleanup): Replace 1UL with
	(uint64_t) 1.
	(__new_sem_wait_fast): Replace unsigned long with uint64_t.
	(__new_sem_wait_slow): Replace unsigned long int with uint64_t.
	Replace 1UL with (uint64_t) 1.
	* sysdeps/nptl/internaltypes.h (new_sem): Replace unsigned long
	int with uint64_t.

2015-01-23  Roland McGrath  <roland@hack.frob.com>

	* inet/if_index.c (if_nameindex): Add missing libc_hidden_weak.
	(if_freenameindex): Likewise.

	* resource/getrlimit64.c: Add missing libc_hidden_def.

2015-01-22  Joseph Myers  <joseph@codesourcery.com>

	* soft-fp/op-common.h (_FP_ADD_INTERNAL): Declare labels with
	__label__.